# Procmon_system_monitor

./: Cargo.toml  LICENSE  QUICKSTART.md  README.md  build.sh
procmon-core/: Cargo.toml
procmon-core/src/: detector.rs  lib.rs  metrics.rs  monitor.rs  partition.rs  process.rs  service.rs  tests.rs
procmon-gui/: Cargo.toml
procmon-gui/src/: main.rs
procmon-tui/: cargo.toml
procmon-tui/src/: app.rs  main.rs  ui.rs
