[workspace]
members = [
    "procmon-core",
    "procmon-tui",
    "procmon-gui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Core system monitoring
sysinfo = "0.32"
procfs = "0.17"
libc = "0.2"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# GUI
eframe = "0.29"
egui = "0.29"
egui_plot = "0.29"

# Threading
parking_lot = "0.12"
