[package]
name = "procmon-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sysinfo.workspace = true
procfs.workspace = true
libc.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
parking_lot.workspace = true

# Additional dependencies for system monitoring
nix = { version = "0.29", features = ["process", "user"] }
